--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "abc",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "name": "totojs",
+  "version": "0.0.0",
+  "description": "toto is a simple yet naughty restful server",
+  "main": "index.js",
   "dependencies": {
     "express": "^4.16.3",
     "marked": "^0.5.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"(0 + 0) __ salut c'est toto! \" "
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Olivier Peltre",
+  "license": "GPL"
 }
