--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "totojs",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "description": "a simple yet naughty restful server",
   "main": "main.js",
   "dependencies": {
     "express": "^4.16.3",
+    "jsdom": "^12.0.0",
     "marked": "^0.5.0"
   },
   "devDependencies": {},
